# MoeBangumi

./: .dockerignore  .gitignore  .hlint.yaml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  cliff.toml  justfile  moe-bangumi.cabal  package-lock.json  release.toml
.claude/: settings.json
.claude/commands/: reflection.md
.claude/rules/: frontend_aesthetics.md
.claude/skills/design/: SKILL.md
.github/workflows/: calendar-seed.yml  docker.yml  release-calendar-seed.yml  release.yml
app/: Main.hs
app/jobs/: Cargo.toml
app/jobs/src/: lib.rs  log_cleanup.rs  rename.rs  rss_fetch.rs
app/server/: Cargo.toml
app/server/src/: infra.rs  lib.rs  openapi.rs
app/server/src/api/: handlers.rs  router.rs
app/server/src/api/handlers/: bangumi.rs  calendar.rs  downloader.rs  episodes.rs  logs.rs  mikan.rs  scan.rs  search.rs  settings.rs  torrents.rs  update.rs
app/server/src/infra/: error.rs  state.rs
app/server/src/infra/state/: builders.rs  types.rs
assets/seed/: 2013-fall.json  2013-spring.json  2013-summer.json  2013-winter.json  2014-fall.json  2014-spring.json  2014-summer.json  2014-winter.json  2015-fall.json  2015-spring.json  2015-summer.json  2015-winter.json  2016-fall.json  2016-spring.json  2016-summer.json  2016-winter.json  2017-fall.json  2017-spring.json  2017-summer.json  2017-winter.json  2018-fall.json  2018-spring.json  2018-summer.json  2018-winter.json  2019-fall.json  2019-spring.json  2019-summer.json  2019-winter.json  2020-fall.json  2020-spring.json  2020-summer.json  2020-winter.json  2021-fall.json  2021-spring.json  2021-summer.json  2021-winter.json  2022-fall.json  2022-spring.json  2022-summer.json  2022-winter.json  (+14 more)
cli/calendar-seed/src/: main.rs
cli/cli/: Cargo.toml
core/domain/: Cargo.toml
core/domain/src/: lib.rs  models.rs  repositories.rs  services.rs  utils.rs
core/downloader/: Cargo.toml
core/downloader/src/: models.rs
core/metadata/: Cargo.toml  README.md
core/metadata/src/: client.rs  error.rs  lib.rs  models.rs  parsed_subject.rs
core/parser/: Cargo.toml
core/pathgen/: Cargo.toml
core/updater/: Cargo.toml
core/washing/: Cargo.toml
crates/bgmtv/: Cargo.toml
crates/cli/: Cargo.toml  Dockerfile  build.rs  entrypoint.sh
crates/cli/src/: main.rs
crates/domain/: Cargo.toml
crates/downloader/: Cargo.toml
crates/downloader/src/: client.rs  config.rs  error.rs  lib.rs  models.rs  qbittorrent_impl.rs  traits.rs
crates/downloader/src/impls/: qbittorrent.rs  transmission.rs
crates/metadata/: Cargo.toml  README.md
crates/metadata/src/: actor.rs  error.rs  lib.rs  models.rs  poster.rs  provider.rs  service.rs
crates/metadata/src/actor/: handle.rs  messages.rs  runner.rs
crates/metadata/src/adapters/: bgmtv_adapter.rs
crates/mikan/: Cargo.toml
crates/notify/: Cargo.toml
crates/qbittorrent/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: banner.rs  config.rs  db.rs  error.rs  handlers.rs  lib.rs  models.rs  openapi.rs  repositories.rs  router.rs  seed.rs  services.rs  state.rs
crates/server/src/api/: handlers.rs  router.rs
crates/server/src/api/handlers/: bangumi.rs  calendar.rs  downloader.rs  episodes.rs  events.rs  logs.rs  mikan.rs  scheduler.rs  search.rs  settings.rs  torrent_search.rs  torrents.rs  webhook.rs
crates/server/src/domain/models/: bangumi.rs  metadata.rs
crates/server/src/domain/repositories/: metadata.rs
crates/server/src/domain/services/: actors.rs  bangumi.rs  calendar.rs  rename.rs  rss_processing.rs
crates/server/src/domain/services/actors/: scheduler.rs
crates/server/src/domain/services/actors/metadata/: actor.rs  poster.rs  service.rs
crates/server/src/domain/services/actors/metadata/actor/: runner.rs
crates/server/src/domain/services/actors/notification/: actor.rs
crates/server/src/domain/services/actors/scheduler/: actor.rs  jobs.rs  traits.rs
crates/server/src/domain/services/actors/scheduler/actor/: handle.rs  messages.rs  runner.rs
crates/server/src/domain/services/actors/scheduler/jobs/: rss_fetch_job.rs
crates/server/src/infra/: error.rs  state.rs  utils.rs
crates/server/src/models/: bangumi.rs  calendar.rs  common.rs  event.rs  metadata.rs  rss.rs  settings.rs  torrent.rs  torrent_search.rs
crates/server/src/repositories/: bangumi.rs  calendar.rs  event.rs  metadata.rs  mikan_mapping.rs  rss.rs  settings.rs  torrent.rs
crates/server/src/services/: bangumi.rs  calendar.rs  downloader.rs  event.rs  log.rs  metadata.rs  mikan_mapping.rs  poster.rs  rename.rs  rss_processing.rs  scheduler.rs  settings.rs  torrent_search.rs  tracing_layer.rs  washing.rs
crates/server/src/services/notification/: mod.rs
crates/server/src/services/poster/: actor.rs
crates/server/src/services/poster/actor/: handle.rs  messages.rs  runner.rs
crates/server/src/services/scheduler/: event_cleanup_job.rs  file_rename_job.rs  metadata_finish_check_job.rs  metadata_sync_job.rs  mikan_mapping_job.rs  rename_job.rs  rss_fetch_job.rs
crates/tmdb/: Cargo.toml
crates/updater/: Cargo.toml
crates/washing/: Cargo.toml
docker/: docker-compose.example.yaml  docker-compose.qbittorrent.yaml  docker-compose.transmission.yaml  docker-compose.yaml
docs/: architecture.md  calendar.md  database-schema.md  downloader.md  emby-import-workflow.md  features.md  file-rename.md  log.md  metadata-architecture.md  release.md  rename-workflow.md  rss-process.md  rss-scheduler.md  tables.md
libs/bgmtv/: Cargo.toml
libs/mikan/: Cargo.toml
libs/rss/: Cargo.toml
libs/tmdb/: Cargo.toml
migrations/: 00000000000000_init.sql  001_init.sql  002_create_bangumi.sql  002_events.sql  002_settings.sql
src/App/: Bangumi.hs
src/Infra/: Environment.hs  Logging.hs  Setting.hs
src/Moe/: Bangumi.hs  Calendar.hs  Metadata.hs  Monad.hs  Rss.hs  Series.hs  Setting.hs  Subscription.hs  Subtitle.hs  Torrent.hs  Util.hs  Video.hs
src/Web/: Routers.hs  Scalar.hs  Server.hs  Tracing.hs  Types.hs
test/: Main.hs
web/: eslint.config.js  index.html  openapi-ts.config.ts  package.json  vite.config.ts
web/src/: demo.css  index.css  main.tsx  routeTree.gen.ts
(+313 files in other folders)
