[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
openapi = ["server/openapi"]

[[bin]]
name = "moe"
path = "src/main.rs"

[[bin]]
name = "calendar_seed"
path = "src/bin/calendar_seed.rs"

[dependencies]
server = { path = "../server", default-features = false }
mikan = { path = "../../libs/mikan" }
bgmtv = { path = "../../libs/bgmtv" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
futures.workspace = true
reqwest.workspace = true
