[package]
name = "metadata"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
openapi = ["dep:utoipa", "model/openapi", "bgmtv/openapi", "tmdb/openapi"]

[dependencies]
# Workspace dependencies
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
reqwest.workspace = true
chrono.workspace = true
futures.workspace = true
utoipa = { workspace = true, optional = true }

# Local dependencies
model = { path = "../model" }
bgmtv = { path = "../bgmtv" }
tmdb = { path = "../tmdb" }

# Poster download dependencies
sha2 = "0.10"
hex = "0.4"
