[package]
name = "metadata"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
openapi = ["dep:utoipa"]

[dependencies]
async-trait.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa = { workspace = true, optional = true }

# Data source clients (in libs/)
bgmtv = { path = "../../libs/bgmtv" }
tmdb = { path = "../../libs/tmdb" }
